# sql-07

./: README.md  config.ini  main.py  pyproject.toml
migrations/versions/: 3a78eb28701c_init.py
