[tool.poetry]
name = "sql-07"
version = "0.1.0"
description = ""
authors = ["Andrii Kylymnyk <a.kylymnyk@gmail.com>"]
readme = "README.md"
#packages = [{include = "sql_07"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.6.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
